# ProofPass

./: .gitignore  PROOF_GENERATION.md  README.md
soroban-zk-investor-gate/: Cargo.toml
soroban-zk-investor-gate/src/: lib.rs  test.rs
soroban-zk-investor-gate/test_snapshots/test/: test_initialize_and_is_authorized_flow.1.json
sp1-zk-accredited-investor/: Cargo.toml
sp1-zk-accredited-investor/certs/: docusign_root.der
sp1-zk-accredited-investor/program/: Cargo.toml
sp1-zk-accredited-investor/program/src/: main.rs
sp1-zk-accredited-investor/script/: Cargo.toml
sp1-zk-accredited-investor/script/src/: lib.rs  main.rs  pdf_utils.rs
