[package]
name = "zk-accredited-investor-script"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-sdk = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }  # if async prover needed, per SP1 examples

# For local PDF logic development and testing (outside zkVM)
lopdf = "0.32"
cms = "0.2"
x509-cert = "0.2"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
regex = "1.10"
rsa = { version = "0.9.10", features = ["sha2"] }

[lib]
name = "script_lib"
path = "src/lib.rs"

[[bin]]
name = "prove"
path = "src/main.rs"
required-features = ["sp1"]

[features]
default = []
sp1 = ["dep:sp1-sdk"]
